# oprf-service

./: .gitignore  .gitmodules  Cargo.toml  README.md  deny.toml  e2e-test.sh  justfile  release-plz.toml  run-setup.sh
.github/workflows/: audit.yml  build-and-push-oprf-key-gen.yml  build-and-push.yml  ci.yml  circom_test.yml  docker-vuln.yml  e2e_test.yml  noir_test.yml  release-plz.yml  rolling.yml  rust_lint.yml  rust_test.yml
circom/: .gitignore
circom/babyjubjub/: babyjubjub.circom  correct_sub_group.circom
circom/client_side_proofs/: oprf_delegate.circom  oprf_nullifier.circom  oprf_query.circom
circom/debug/: subgroup_check.circom
circom/eddsa_poseidon2/: eddsaposeidon2.circom
circom/main/: OPRFKeyGenProof13.circom  OPRFKeyGenProof13.r1cs  OPRFKeyGenProof25.circom  OPRFKeyGenProof25.r1cs  OPRFKeyGenProof37.circom  OPRFKeyGenProof37.r1cs  OPRFNullifierProof.circom  OPRFNullifierProof.r1cs  OPRFQueryProof.r1cs
circom/main/key-gen/: OPRFKeyGen.13.vk.json  OPRFKeyGen.13.zkey  OPRFKeyGen.25.vk.json  OPRFKeyGen.25.zkey  OPRFKeyGen.37.arks.zkey  OPRFKeyGen.37.vk.json  OPRFKeyGen.37.zkey
circom/main/nullifier/: OPRFNullifier.arks.zkey  OPRFNullifier.vk.json  OPRFNullifier.zkey
circom/main/query/: OPRFQuery.arks.zkey  OPRFQuery.vk.json  OPRFQuery.zkey
circom/oprf_keys/: keygen.circom
circom/tests/: package-lock.json
circom/verify_dlog/: verify_dlog.circom
contracts/deploy-safe/: .env.example  README.md  package-lock.json  package.json
contracts/src/: OprfKeyRegistry.sol  Types.sol  VerifierKeyGen13.sol  VerifierKeyGen37.sol
contracts/test/: Groth16Verifier.t.sol  OprfKeyRegistry.t.sol  OprfKeyRegistryUpgrade.t.sol
docs/: oprf.typst  references.bib
migrations/: 20260128092844_init_db_structure.up.sql
noir/babyjubjub/: Nargo.toml
noir/eddsa_poseidon2/: Nargo.toml
noir/oprf/: Nargo.toml  Prover.toml
noir/ownership_proof/: Nargo.toml  Prover.toml
oprf/: CHANGELOG.md  Cargo.toml
oprf-client/: CHANGELOG.md  Cargo.toml
oprf-client-example/: Cargo.toml
oprf-client-example/src/: lib.rs
oprf-client/src/: lib.rs  sessions.rs  ws.rs
oprf-client/src/ws/: mod.rs  native.rs  wasm.rs
oprf-core/: CHANGELOG.md  Cargo.toml
oprf-core/benches/: oprf.rs  proof.json
oprf-core/src/: ddlog_equality.rs  dlog_equality.rs  keygen.rs  lib.rs  oprf.rs  shamir.rs
oprf-core/src/ddlog_equality/: additive.rs  shamir.rs
oprf-core/src/oprf/: client.rs  mappings.rs  server.rs
oprf-dev-client/: CHANGELOG.md  Cargo.toml
oprf-dev-client-example/: Cargo.toml
oprf-dev-client/examples/: dev-client-example.rs
oprf-dev-client/src/: config.rs  contract.rs  endless_run.rs  health_checks.rs  lib.rs  main.rs
oprf-key-gen/: CHANGELOG.md  Cargo.toml
oprf-key-gen/migrations/: 20260128092844_init_db_structure.down.sql  20260128092844_init_db_structure.up.sql  20260416133133_keygen_intermediates_table.down.sql  20260416133133_keygen_intermediates_table.up.sql  20260428072903_chain_event_cursor.down.sql  20260428072903_chain_event_cursor.up.sql  20260526111425_node_information.down.sql  20260526111425_node_information.up.sql
oprf-key-gen/src/: api.rs  config.rs  lib.rs  main.rs  metrics.rs  postgres.rs  services.rs
oprf-key-gen/src/api/: health.rs  info.rs
oprf-key-gen/src/postgres/: tests.rs
oprf-key-gen/src/services/: event_cursor_store.rs  key_event_watcher.rs  secret_gen.rs  secret_manager.rs  transaction_handler.rs  transaction_nonce_store.rs
oprf-key-gen/src/services/key_event_watcher/: events.rs  handler.rs  tests.rs
oprf-key-gen/src/services/secret_gen/: tests.rs
oprf-key-gen/src/services/secret_manager/: aws.rs  postgres.rs
oprf-key-gen/src/services/secret_manager/aws/: tests.rs
oprf-key-gen/src/services/secret_manager/postgres/: tests.rs
oprf-key-gen/src/tests/: keygen_test_secret_manager.rs  mod.rs  setup.rs
oprf-key-gen/tests/: aws_secret_manager.rs  oprf_key_gen_test_suite.rs  postgres_secret_manager.rs  setup.rs
oprf-service/: CHANGELOG.md  Cargo.toml
oprf-service-example/: Cargo.toml
oprf-service-example/src/: auth.rs  lib.rs
oprf-service/examples/: oprf-service-example.rs  taceo-oprf-service-example.rs
oprf-service/examples/deploy/: docker-compose.yml
oprf-service/examples/deploy/datadog/: oprf-logs.yaml
oprf-service/examples/simple_authenticator/: mod.rs
oprf-service/src/: api.rs  config.rs  lib.rs  metrics.rs  services.rs
oprf-service/src/api/: errors.rs  health.rs  info.rs  oprf.rs  oprf_delegate.rs  v1.rs  version_header.rs
oprf-service/src/services/: key_event_watcher.rs  open_sessions.rs  oprf_key_material_store.rs  secret_manager.rs
oprf-service/src/services/secret_manager/: aws.rs  postgres.rs
oprf-service/src/services/secret_manager/postgres/: tests.rs
oprf-service/src/tests/: mod.rs  setup.rs
oprf-service/tests/: oprf_service_test_suite.rs  postgres_secret_manager.rs  setup.rs
oprf-test/: Cargo.toml
oprf-test-utils/: CHANGELOG.md  Cargo.toml
oprf-test-utils/contracts/: BabyJubJub.json  ERC1967Proxy.json  TestOprfKeyRegistry.json  Verifier.13.json  Verifier.25.json
oprf-test-utils/src/: deploy_anvil.rs  health_checks.rs  lib.rs  node_setup.rs  oprf_key_registry.rs  secret_manager.rs  setup.rs  test_secret_manager.rs
oprf-test-utils/src/secret_manager/: test_secret_manager.rs
oprf-test-utils/templates/: round2-call.sol.template
oprf-test-utils/tests/: keygen.rs  node.rs
oprf-test/contracts/: BabyJubJub.json  ERC1967Proxy.json  TestOprfKeyRegistry.json  Verifier.13.json  Verifier.25.json
oprf-test/src/: deploy_anvil.rs  health_checks.rs  key_gen_setup.rs  lib.rs  node_setup.rs  oprf_key_registry.rs  oprf_key_registry_scripts.rs  setup.rs  test_secret_manager.rs
oprf-test/templates/: contributions.sol.template  round1-call.sol.template  round2-call.sol.template
oprf-test/tests/: keygen.rs  node.rs  tests.rs
oprf-types/: CHANGELOG.md  Cargo.toml  OprfKeyRegistry.json
oprf-types/src/: api.rs  chain.rs  crypto.rs  lib.rs  service.rs
oprf-types/src/api/: v1.rs
oprf/src/: anvil.rs  lib.rs
scripts/: lib.sh  run-backfill-monkey-test.sh  run-setup.sh
(+24 files in other folders)
