[package]
name = "oprf-client-example"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
ark-babyjubjub = { workspace = true }
ark-ec.workspace = true
ark-ff = { workspace = true }
eyre.workspace = true
oprf-client = { workspace = true }
oprf-types = { workspace = true }
rand.workspace = true
tracing.workspace = true
