[package]
name = "taceo-oprf-client"
version = "0.7.2"
edition.workspace = true
rust-version.workspace = true
description = "Client for TACEO:OPRF"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["cryptography", "mpc", "oprf"]
publish = true

[dependencies]
ark-babyjubjub = { workspace = true }
ark-ec = { workspace = true }
ciborium = { workspace = true }
futures = { workspace = true }
oprf-core = { package = "taceo-oprf-core", path = "../oprf-core", version = "0.4" }
oprf-types = { package = "taceo-oprf-types", path = "../oprf-types", version = "0.9" }
poseidon2 = { workspace = true }
serde = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-tungstenite = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
axum = { workspace = true }
axum-test = { workspace = true, features = ["ws"] }
rand.workspace = true
