[package]
name = "taceo-oprf-core"
version = "0.4.1"
edition.workspace = true
rust-version.workspace = true
description = "Core implementation of the distributed OPRF protocol for TACEO:OPRF"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["cryptography", "mpc", "oprf"]
publish = true

[[bench]]
harness = false
name = "oprf"
required-features = ["additive", "server"]

[dependencies]
ark-babyjubjub = { workspace = true }
ark-ec = { workspace = true }
ark-ff = { workspace = true }
ark-serde-compat = { workspace = true, features = ["babyjubjub"] }
ark-serialize = { workspace = true, features = ["derive"] }
blake3 = { workspace = true }
itertools = { workspace = true }
num-bigint.workspace = true
poseidon2 = { workspace = true, features = ["bn254", "t3", "t4", "t16"] }
rand.workspace = true
serde = { workspace = true, features = ["derive"] }
subtle = "2"
uuid = { workspace = true, features = ["v4"] }
zeroize = { workspace = true, features = ["derive"] }

[dev-dependencies]
ark-bn254 = { workspace = true }
ark-groth16 = { workspace = true }
circom-types.workspace = true
criterion = { workspace = true }
serde_json = { workspace = true }

[features]
default = ["server"]
additive = []
server = []
