[package]
name = "taceo-oprf-dev-client"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
alloy = { workspace = true, features = ["full", "rpc", "rpc-client-ws"] }
clap = { workspace = true, features = ["derive", "env"] }
eyre.workspace = true
oprf-client = { package = "taceo-oprf-client", path = "../oprf-client", version = "0.3" }
oprf-core = { package = "taceo-oprf-core", path = "../oprf-core", version = "0.3" }
oprf-test-utils = { package = "taceo-oprf-test-utils", path = "../oprf-test-utils", version = "0.1" }
oprf-types = { package = "taceo-oprf-types", path = "../oprf-types", version = "0.4" }
rand.workspace = true
serde.workspace = true
tokio = { workspace = true, features = [
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tokio-macros",
] }
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
ark-babyjubjub = { workspace = true }
ark-ec.workspace = true
ark-ff = { workspace = true }
humantime.workspace = true
nodes-observability = { workspace = true }
rand_chacha = { workspace = true }
rustls = { workspace = true }
secrecy = { workspace = true }
webpki-roots = { workspace = true }
