[package]
name = "taceo-oprf-dev-client"
version = "0.9.3"
edition.workspace = true
rust-version.workspace = true
description = "A development client to interact with the TACEO:OPRF service."
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["client", "development", "mpc", "oprf"]
publish = true

[dependencies]
alloy = { workspace = true, features = [
  "contract",
  "provider-http",
  "provider-ws",
  "signer-local"
] }
ark-babyjubjub.workspace = true
ark-ff.workspace = true
clap = { workspace = true, features = ["derive", "env"] }
eyre.workspace = true
humantime.workspace = true
oprf-client = { package = "taceo-oprf-client", path = "../oprf-client", version = "0.9" }
oprf-core = { package = "taceo-oprf-core", path = "../oprf-core", version = "0.5" }
oprf-types = { package = "taceo-oprf-types", path = "../oprf-types", version = "0.13" }
rand.workspace = true
rand_chacha.workspace = true
reqwest = { workspace = true }
rustls.workspace = true
secrecy.workspace = true
serde.workspace = true
tokio = { workspace = true, features = [
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tokio-macros",
] }
tracing.workspace = true
uuid.workspace = true
webpki-roots = { workspace = true }

[dev-dependencies]
ark-babyjubjub = { workspace = true }
ark-ec.workspace = true
ark-ff = { workspace = true }
humantime.workspace = true
rand_chacha = { workspace = true }
rustls = { workspace = true }
secrecy = { workspace = true }
telemetry-batteries.workspace = true
webpki-roots = { workspace = true }
