[package]
name = "taceo-oprf-key-gen"
version = "0.12.0"
edition.workspace = true
rust-version.workspace = true
description = "TACEO:OPRF Distributed Key Generation Protocol."
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["cryptography", "mpc", "oprf"]
publish = false

[package.metadata.cargo-machete]
ignored = ["humantime-serde"]

[dependencies]
alloy = { workspace = true, features = [
  "contract",
  "provider-http",
  "provider-ws",
  "reqwest-rustls-tls",
  "rpc-types-eth",
  "signer-local",
  "sol-types",
] }
ark-babyjubjub = { workspace = true }
ark-bn254.workspace = true
ark-ec.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
async-trait = { workspace = true }
axum = { workspace = true }
backon = { workspace = true, features = ["std", "tokio-sleep"] }
config = { workspace = true }
eyre.workspace = true
futures = { workspace = true }
groth16-material = { workspace = true, features = ["circom"] }
humantime-serde = { workspace = true }
itertools = { workspace = true }
metrics = { workspace = true }
nodes-common = { workspace = true, features = [
  "api",
  "postgres",
  "serde",
  "web3",
] }
oprf-core = { package = "taceo-oprf-core", path = "../oprf-core", version = "0.6" }
oprf-types = { package = "taceo-oprf-types", path = "../oprf-types", version = "0.14", features = [
  "service"
] }
rand.workspace = true
rustls = { workspace = true }
secrecy = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
sqlx = { workspace = true, features = [
  "migrate",
  "postgres",
  "runtime-tokio",
  "tls-rustls-aws-lc-rs",
] }
telemetry-batteries = { workspace = true, features = ["metrics-statsd"] }
thiserror.workspace = true
tokio = { workspace = true, features = [
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tokio-macros",
] }
tokio-util = { workspace = true }
tower-http = { workspace = true, features = ["set-header", "trace"] }
tracing = { workspace = true, features = ["release_max_level_debug"] }
zeroize = { workspace = true, features = ["derive"] }

[dev-dependencies]
alloy = { workspace = true, features = ["node-bindings"] }
axum-test = { workspace = true, features = ["ws"] }
oprf-test-utils = { package = "taceo-oprf-test-utils", path = "../oprf-test-utils", version = "0.13" }
parking_lot = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
tikv-jemallocator = { workspace = true }
