[package]
name = "taceo-oprf-service"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
description = "Main service for nodes of TACEO:Oprf"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["cryptography", "mpc", "oprf"]
publish = true

[dependencies]
alloy = { workspace = true, features = ["full", "rpc", "rpc-client-ws"] }
ark-babyjubjub = { workspace = true }
async-trait = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = { workspace = true }
axum = { workspace = true, features = ["ws"] }
ciborium = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
eyre.workspace = true
futures = { workspace = true }
http = { workspace = true }
humantime.workspace = true
metrics = { workspace = true }
nodes-common = { workspace = true }
oprf-core = { package = "taceo-oprf-core", path = "../oprf-core", version = "0.2" }
oprf-types = { package = "taceo-oprf-types", path = "../oprf-types", version = "0.2" }
parking_lot = { workspace = true }
rand.workspace = true
secrecy = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = [
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tokio-macros",
] }
tokio-util = { workspace = true }
tower-http = { workspace = true, features = ["set-header", "trace"] }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
ark-ff = { workspace = true }
axum-test = { workspace = true, features = ["ws"] }
oprf-client = { package = "taceo-oprf-client", path = "../oprf-client", version = "0.1" }
