[package]
name = "taceo-oprf-service"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
description = "Main service for nodes of TACEO:OPRF"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["cryptography", "mpc", "oprf"]
publish = true

[dependencies]
alloy = { workspace = true, features = ["full", "rpc", "rpc-client-ws"] }
ark-babyjubjub = { workspace = true }
ark-serialize.workspace = true
async-trait = { workspace = true }
aws-config = { workspace = true, features = ["behavior-version-latest"] }
aws-sdk-secretsmanager = { workspace = true }
axum = { workspace = true, features = ["ws"] }
axum-extra = { workspace = true, features = ["typed-header"] }
ciborium = { workspace = true }
clap = { workspace = true, features = ["derive", "env"] }
eyre.workspace = true
futures = { workspace = true }
http = { workspace = true }
humantime.workspace = true
metrics = { workspace = true }
nodes-common = { workspace = true }
oprf-core = { package = "taceo-oprf-core", path = "../oprf-core", version = "0.4" }
oprf-types = { package = "taceo-oprf-types", path = "../oprf-types", version = "0.5" }
parking_lot = { workspace = true }
rand.workspace = true
secrecy = { workspace = true }
semver.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = [
  "migrate",
  "postgres",
  "runtime-tokio",
  "tls-rustls-ring-webpki"
] }
thiserror.workspace = true
tokio = { workspace = true, features = [
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tokio-macros",
] }
tokio-util = { workspace = true }
tower-http = { workspace = true, features = ["set-header", "trace"] }
tracing.workspace = true
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
ark-ff = { workspace = true }
axum-test = { workspace = true, features = ["ws"] }
itertools = { workspace = true }
nodes-observability = { workspace = true }
oprf-client = { package = "taceo-oprf-client", path = "../oprf-client", version = "0.4" }
oprf-test-utils = { package = "taceo-oprf-test-utils", path = "../oprf-test-utils", version = "0.1", default-features = false, features = [
  "deploy-anvil",
  "postgres-test-container"
] }
rustls = { workspace = true }
