[package]
name = "taceo-oprf-service"
version = "0.18.1"
edition.workspace = true
rust-version.workspace = true
description = "Main service for nodes of TACEO:OPRF"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["cryptography", "mpc", "oprf"]
publish = true

[package.metadata.cargo-machete]
ignored = ["humantime-serde"]

[dependencies]
ark-babyjubjub = { workspace = true }
ark-serialize.workspace = true
async-trait = { workspace = true }
axum = { workspace = true, features = ["ws"] }
axum-extra = { workspace = true, features = ["typed-header"] }
backon = { workspace = true, features = ["std", "tokio-sleep"] }
ciborium = { workspace = true }
eyre.workspace = true
http = { workspace = true }
humantime-serde = { workspace = true }
metrics = { workspace = true }
moka.workspace = true
nodes-common = { workspace = true, features = [
  "api",
  "postgres",
  "serde"
] }
oprf-core = { package = "taceo-oprf-core", path = "../oprf-core", version = "0.6" }
oprf-types = { package = "taceo-oprf-types", path = "../oprf-types", version = "0.15", features = [
  "service"
] }
parking_lot = { workspace = true }
rand.workspace = true
secrecy = { workspace = true, features = ["serde"] }
semver.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx = { workspace = true, features = [
  "postgres",
  "runtime-tokio",
  "tls-rustls-aws-lc-rs"
], optional = true }
thiserror.workspace = true
tokio = { workspace = true, features = [
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tokio-macros",
] }
tokio-util = { workspace = true }
tower-http = { workspace = true, features = ["set-header", "timeout", "trace", "cors"] }
tracing.workspace = true
tungstenite = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
zeroize.workspace = true

[dev-dependencies]
ark-ff = { workspace = true }
axum-test = { workspace = true, features = ["ws"] }
config = { workspace = true }
itertools = { workspace = true }
oprf-client = { package = "taceo-oprf-client", path = "../oprf-client", version = "0.10" }
oprf-test-utils = { package = "taceo-oprf-test-utils", path = "../oprf-test-utils", version = "0.14", default-features = false, features = [
  "deploy-anvil",
  "postgres-test-container"
] }
ruint.workspace = true
rustls = { workspace = true }
telemetry-batteries = { workspace = true, features = ["metrics-statsd"] }

[features]
default = ["postgres"]
postgres = ["dep:sqlx"]
