[package]
name = "taceo-oprf-test-utils"
version = "0.7.0"
edition.workspace = true
rust-version.workspace = true
description = "Utilities for testing TACEO:OPRF based services."
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["oprf", "tests"]
publish = true

[[bin]]
name = "generate-test-transcript"
path = "src/bin/generate-test-transcript.rs"
required-features = ["generate-test-transcript"]

[dependencies]
alloy = { workspace = true, features = [
  "full",
  "node-bindings",
  "rpc",
  "rpc-client-ws"
] }
ark-babyjubjub = { workspace = true }
ark-bn254 = { workspace = true, optional = true }
ark-ec.workspace = true
ark-ff.workspace = true
askama = { version = "0.15", optional = true }
async-trait.workspace = true
aws-config = { workspace = true, features = ["behavior-version-latest"], optional = true }
aws-sdk-secretsmanager = { workspace = true, optional = true }
clap = { workspace = true, features = ["derive", "env"], optional = true }
eyre.workspace = true
futures = { workspace = true }
groth16-material = { workspace = true, optional = true }
groth16-sol = { workspace = true, optional = true }
itertools.workspace = true
nodes-observability = { workspace = true, optional = true }
oprf-core = { package = "taceo-oprf-core", path = "../oprf-core", version = "0.4" }
oprf-types = { package = "taceo-oprf-types", path = "../oprf-types", version = "0.9" }
parking_lot = { workspace = true }
rand.workspace = true
rand_chacha.workspace = true
reqwest = { workspace = true }
serde_json = { workspace = true, optional = true }
sqlx = { workspace = true, features = [
  "postgres",
  "runtime-tokio",
], optional = true }
testcontainers-modules = { workspace = true, features = [
  "localstack",
  "postgres"
], optional = true }
tokio = { workspace = true, features = [
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tokio-macros",
] }
tokio-util = { workspace = true, optional = true }
tracing.workspace = true

[features]
default = ["aws-test-container", "deploy-anvil", "postgres-test-container"]
aws-test-container = [
  "dep:aws-config",
  "dep:aws-sdk-secretsmanager",
  "dep:testcontainers-modules"
]
ci = []
deploy-anvil = ["dep:serde_json", "dep:tokio-util"]
generate-test-transcript = [
  "dep:ark-bn254",
  "dep:askama",
  "dep:clap",
  "dep:groth16-material",
  "dep:groth16-sol",
  "dep:nodes-observability"
]
postgres-test-container = ["dep:sqlx", "dep:testcontainers-modules"]
