[package]
name = "taceo-oprf-test-utils"
version = "0.12.0"
edition.workspace = true
rust-version.workspace = true
description = "Utilities for testing TACEO:OPRF based services."
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["oprf", "tests"]
publish = true

[[bin]]
name = "generate-test-transcript"
path = "src/bin/generate-test-transcript.rs"
required-features = ["generate-test-transcript"]

[dependencies]
alloy = { workspace = true, features = [
  "contract",
  "node-bindings",
  "provider-http",
  "provider-ws",
  "rpc-types-eth",
  "signer-local",
  "sol-types"
] }
ark-babyjubjub = { workspace = true }
ark-bn254 = { workspace = true, optional = true }
ark-ec.workspace = true
ark-ff.workspace = true
askama = { version = "0.15", optional = true }
async-trait.workspace = true
clap = { workspace = true, features = ["derive", "env"], optional = true }
eyre.workspace = true
futures = { workspace = true }
groth16-material = { workspace = true, optional = true }
groth16-sol = { workspace = true, optional = true }
itertools.workspace = true
nodes-common = { workspace = true, features = ["postgres"], optional = true }
oprf-core = { package = "taceo-oprf-core", path = "../oprf-core", version = "0.5" }
oprf-types = { package = "taceo-oprf-types", path = "../oprf-types", version = "0.13" }
parking_lot = { workspace = true }
rand.workspace = true
rand_chacha.workspace = true
reqwest = { workspace = true }
serde_json = { workspace = true, optional = true }
sqlx = { workspace = true, features = [
  "postgres",
  "runtime-tokio",
], optional = true }
testcontainers-modules = { workspace = true, features = ["postgres"], optional = true }
tokio = { workspace = true, features = [
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tokio-macros",
] }
tokio-util = { workspace = true, optional = true }
tracing.workspace = true

[features]
default = ["deploy-anvil", "postgres-test-container"]
ci = []
deploy-anvil = ["dep:serde_json", "dep:tokio-util"]
generate-test-transcript = [
  "dep:ark-bn254",
  "dep:askama",
  "dep:clap",
  "dep:groth16-material",
  "dep:groth16-sol",
  "groth16-material/circom"
]
postgres-test-container = [
  "dep:nodes-common",
  "dep:sqlx",
  "dep:testcontainers-modules"
]
