[package]
name = "taceo-oprf-test"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[dependencies]
alloy = { workspace = true, features = [
  "full",
  "node-bindings",
  "rpc",
  "rpc-client-ws"
] }
ark-babyjubjub = { workspace = true }
ark-ff.workspace = true
eyre.workspace = true
oprf-client-example = { package = "taceo-oprf-client-example", path = "../oprf-client-example", version = "0.1" }
oprf-key-gen = { package = "taceo-oprf-key-gen", path = "../oprf-key-gen", version = "0.1" }
oprf-service = { package = "taceo-oprf-service", path = "../oprf-service", version = "0.3" }
oprf-service-example = { package = "taceo-oprf-service-example", path = "../oprf-service-example", version = "0.1" }
oprf-test-utils = { package = "taceo-oprf-test-utils", path = "../oprf-test-utils", version = "0.1" }
oprf-types = { package = "taceo-oprf-types", path = "../oprf-types", version = "0.4" }
rand.workspace = true
reqwest = { workspace = true }
semver.workspace = true
serde_json.workspace = true
tokio = { workspace = true, features = [
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tokio-macros",
] }
tokio-util = { workspace = true }

[dev-dependencies]
serial_test = { version = "3.3", features = ["file_locks"] }
tokio-tungstenite = { workspace = true }
