[package]
name = "taceo-oprf-test"
version = "0.14.0"
edition.workspace = true
rust-version.workspace = true
description = "Integration tests for the TACEO:OPRF workspace."
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "generate-test-transcript"
path = "src/bin/generate-test-transcript.rs"
required-features = ["generate-test-transcript"]

[dependencies]
alloy = { workspace = true, features = [
  "contract",
  "node-bindings",
  "provider-http",
  "provider-ws",
  "rpc-types-eth",
  "signer-local",
  "sol-types"
] }
ark-babyjubjub = { workspace = true }
ark-bn254 = { workspace = true, optional = true }
ark-ec.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
askama = { version = "0.16", optional = true }
axum-test = { workspace = true, features = ["ws"] }
ciborium.workspace = true
clap = { workspace = true, features = ["derive", "env"], optional = true }
eyre.workspace = true
futures = { workspace = true }
groth16-material = { workspace = true, optional = true }
groth16-sol = { workspace = true, optional = true }
http = { workspace = true }
itertools.workspace = true
nodes-common = { workspace = true, features = ["postgres", "test-utils"] }
oprf-client = { package = "taceo-oprf-client", path = "../oprf-client", version = "0.10" }
oprf-core = { package = "taceo-oprf-core", path = "../oprf-core", version = "0.6" }
oprf-key-gen = { package = "taceo-oprf-key-gen", path = "../oprf-key-gen/", version = "0.12" }
oprf-service = { package = "taceo-oprf-service", path = "../oprf-service/", version = "0.18" }
oprf-types = { package = "taceo-oprf-types", path = "../oprf-types", version = "0.15", features = [
  "chain",
  "service",
] }
rand.workspace = true
rand_chacha = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = [
  "postgres",
  "runtime-tokio",
] }
tokio = { workspace = true, features = [
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tokio-macros",
] }
tokio-util.workspace = true
tungstenite = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
axum.workspace = true
reqwest.workspace = true
ruint = { workspace = true, features = ["rand"] }

[features]
generate-test-transcript = [
  "dep:ark-bn254",
  "dep:askama",
  "dep:clap",
  "dep:groth16-material",
  "dep:groth16-sol",
  "dep:rand_chacha",
  "groth16-material/circom"
]
