[package]
name = "taceo-oprf-test"
version = "0.14.0"
edition.workspace = true
rust-version.workspace = true
description = "Integration tests for the TACEO:OPRF workspace."
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
publish = false

[[bin]]
name = "generate-test-transcript"
path = "src/bin/generate-test-transcript.rs"
required-features = ["generate-test-transcript"]

[dependencies]
alloy = { workspace = true, features = [
  "contract",
  "node-bindings",
  "provider-http",
  "provider-ws",
  "rpc-types-eth",
  "signer-local",
  "sol-types"
] }
ark-babyjubjub = { workspace = true }
ark-bn254 = { workspace = true, optional = true }
ark-ec.workspace = true
ark-ff.workspace = true
ark-serialize.workspace = true
askama = { version = "0.16", optional = true }
axum-test = { workspace = true, features = ["ws"] }
ciborium.workspace = true
clap = { workspace = true, features = ["derive", "env"], optional = true }
eyre.workspace = true
futures = { workspace = true }
groth16-material = { workspace = true, optional = true }
groth16-sol = { workspace = true, optional = true }
http = { workspace = true }
itertools.workspace = true
nodes-common = { workspace = true, features = ["postgres", "test-utils"] }
oprf-key-gen = { package = "taceo-oprf-key-gen", path = "../oprf-key-gen/", version = "0.12" }
rand.workspace = true
rand_chacha = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
sqlx = { workspace = true, features = [
  "postgres",
  "runtime-tokio",
] }
taceo-oprf = { path = "../oprf", version = "0.18.0", features = [
  "anvil",
  "full"
] }
tokio = { workspace = true, features = [
  "net",
  "rt-multi-thread",
  "signal",
  "sync",
  "time",
  "tokio-macros",
] }
tokio-util.workspace = true
tungstenite = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }

[dev-dependencies]
axum.workspace = true
reqwest.workspace = true
ruint = { workspace = true, features = ["rand"] }

[features]
generate-test-transcript = [
  "dep:ark-bn254",
  "dep:askama",
  "dep:clap",
  "dep:groth16-material",
  "dep:groth16-sol",
  "dep:rand_chacha",
  "groth16-material/circom"
]
