[package]
name = "taceo-oprf-types"
version = "0.4.0"
edition.workspace = true
rust-version.workspace = true
description = "Types for TACEO:Oprf"
readme.workspace = true
homepage.workspace = true
repository.workspace = true
license.workspace = true
keywords = ["cryptography", "mpc", "oprf"]
publish = true

[dependencies]
alloy = { workspace = true, features = ["contract"] }
ark-babyjubjub = { workspace = true }
ark-ff = { workspace = true }
ark-serde-compat = { workspace = true }
async-trait = { workspace = true }
circom-types = { workspace = true, features = [
  "bn254",
  "groth16",
  "proof",
  "zkey"
] }
eyre = { workspace = true }
groth16-sol = { workspace = true }
http = { workspace = true }
oprf-core = { package = "taceo-oprf-core", path = "../oprf-core", version = "0.3" }
serde = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
uuid = { workspace = true, features = ["serde", "v4"] }
